# C4Gen

./: .gitignore
results/: java3018_repos_less_than_10w.jsonl
view1/: README.md  clone_repos_v2.py  howtouse.md  retry_failed_fetches.py  test_enre_output.py  three_language_projects.json  workflow_processor_cpp.py  workflow_processor_java copy.py  workflow_processor_java.py  workflow_processor_py.py
view1/dataset/: check_sha_consistency.py
view1/test_projects/test_cpp_project/: CMakeLists.txt
view1/test_projects/test_cpp_project/include/: base.h  config.h  derived.h  templ.h  util.h
view1/test_projects/test_cpp_project/src/: base.cpp  derived.cpp  main.cpp  util.cpp
view1/tree-sitter/: tree_Sitter_parse.py
view1/utils_enre_reports/: enre_report_generator_cpp.py  enre_report_generator_java.py  enre_report_generator_py.py  organize_beam_reports.py  process_dataset.py
view1/utils_eval/: eval.py  eval_CCT5.py  eval_COME.py  eval_IST.py  eval_each_diff.py  eval_view1.py
view1/utils_generate_commit_message/: .env  batch_commit_generator.py  task_generator.py  task_generator_view1.py
view1/utils_relatedcode/: check_missing_instances.py  extract_instance_ids.py  (+1 more)
view2/: .gitignore  __main__.spec  cluster_demo.py  clustering_codebert_umap_hdbscan.py  entity_clustering_comparison.py  entity_clustering_improved.py  experiment.py  generate_commit_message.py  generate_commit_message_with_clusters.py  integrated_pipeline.py  parse_enre_report.py  数据处理流程.md
view3/: README.md  check_embeddings.py  environment.yml  replace_with_new.py  test.py  test_jinaai.py
(+54 files in other folders)
